--- a/test.html
+++ b/test.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
 <meta charset="UTF-8">
-<title>UK Exterior Painting Fixed Price Calculator</title>
+<title>Exterior Painting Quote Calculator</title>
 
 <style>
 body {
@@ -19,7 +19,6 @@ border-radius: 8px;
 }
 h1 {
 text-align: center;
-margin-bottom: 10px;
 }
 h3 {
 margin-top: 30px;
@@ -30,8 +29,9 @@ label {
 display: block;
 margin: 8px 0;
 }
-select, input[type="checkbox"] {
-margin-right: 8px;
+input[type="number"], select {
+width: 150px;
+padding: 5px;
 }
 button {
 margin-top: 30px;
@@ -57,103 +57,73 @@ font-size: 20px;
 font-size: 14px;
 color: #555;
 }
-.breakdown {
-margin-top: 15px;
-font-size: 15px;
-}
 </style>
 </head>
 
 <body>
 
 <div class="calculator">
-<h1>Exterior Painting Fixed Price Calculator</h1>
+<h1>Exterior Painting Quote Calculator</h1>
 <p class="small" style="text-align:center;">
-UK-based pricing • Labour & materials included • No obligation
+UK-based pricing • Calculated by square metres
 </p>
 
-<!-- PROPERTY -->
-<h3>1. Property Details</h3>
-
-<label>
-Property type:
-<select id="property">
-<option value="terraced">Terraced</option>
-<option value="semi">Semi-detached</option>
-<option value="detached">Detached</option>
-<option value="bungalow">Bungalow</option>
-</select>
-</label>
-
-<label>
-Number of storeys:
+<!-- STOREYS -->
+<h3>1. Number of Storeys</h3>
 <select id="storeys">
 <option value="1">1 storey</option>
-<option value="1.15">2 storeys</option>
-<option value="1.3">3+ storeys</option>
+<option value="2">2 storeys</option>
+<option value="3">3 storeys</option>
 </select>
-</label>
 
 <!-- ELEVATIONS -->
-<h3>2. Elevations to Paint</h3>
-<label><input type="checkbox" class="elevation"> Front</label>
-<label><input type="checkbox" class="elevation"> Rear</label>
-<label><input type="checkbox" class="elevation"> Side (left)</label>
-<label><input type="checkbox" class="elevation"> Side (right)</label>
+<h3>2. Elevations to Paint (Length in metres)</h3>
+
+<label>Front elevation length:
+<input type="number" id="front" min="0" step="0.1"> m
+</label>
+
+<label>Rear elevation length:
+<input type="number" id="rear" min="0" step="0.1"> m
+</label>
+
+<label>Side left elevation length:
+<input type="number" id="sideLeft" min="0" step="0.1"> m
+</label>
+
+<label>Side right elevation length:
+<input type="number" id="sideRight" min="0" step="0.1"> m
+</label>
+
+<p class="small">
+Leave any elevation blank if not required.
+</p>
 
 <!-- SURFACE -->
 <h3>3. Wall Surface</h3>
 <select id="surface">
-<option value="28">Render</option>
-<option value="32">Pebbledash</option>
-<option value="30">Painted brick</option>
-<option value="35">Unpainted brick</option>
-<option value="38">Stone</option>
-</select>
-
-<!-- CONDITION -->
-<h3>4. Current Condition</h3>
-<select id="condition">
-<option value="1">Excellent</option>
-<option value="1.15">Fair</option>
-<option value="1.3">Poor</option>
-<option value="1.5">Very poor</option>
-</select>
-
-<!-- PAINT -->
-<h3>5. Paint System</h3>
-<select id="paint">
-<option value="1">Trade masonry (2 coats)</option>
-<option value="1.2">Silicone masonry</option>
-<option value="1.3">Elastomeric coating</option>
-<option value="1.4">Lime paint (heritage)</option>
+<option value="28">Render (£28 / m²)</option>
+<option value="32">Pebbledash (£32 / m²)</option>
+<option value="30">Painted brick (£30 / m²)</option>
+<option value="35">Unpainted brick (£35 / m²)</option>
+<option value="38">Stone (£38 / m²)</option>
 </select>
 
 <!-- ACCESS -->
-<h3>6. Access Required</h3>
-<select id="access">
-<option value="0">Ladders only</option>
-<option value="450">Scaffold tower</option>
-<option value="1200">Full scaffold</option>
-</select>
+<h3>4. Access Required</h3>
 
-<!-- EXTRAS -->
-<h3>7. Optional Extras</h3>
-<label><input type="checkbox" class="extra" value="450"> Fascias & soffits</label>
-<label><input type="checkbox" class="extra" value="250"> Gutters & downpipes</label>
-<label><input type="checkbox" class="extra" value="180"> Window frames (up to 5)</label>
-<label><input type="checkbox" class="extra" value="120"> External door</label>
-<label><input type="checkbox" class="extra" value="300"> Metal railings / gates</label>
-<label><input type="checkbox" class="extra" value="250"> Fungicidal wash</label>
-<label><input type="checkbox" class="extra" value="350"> Waterproof coating</label>
+<label><input type="radio" name="access" value="0" checked> Ladders</label>
+<label><input type="radio" name="access" value="450"> Scaffold tower</label>
+<label><input type="radio" name="access" value="750"> Scaffold over conservatory</label>
+<label><input type="radio" name="access" value="1200"> Full scaffold</label>
 
 <button onclick="calculateQuote()">Calculate Fixed Price</button>
 
 <div class="result" id="result"></div>
 
 <p class="small">
-* Fixed price estimate based on customer-provided information.
-Final price confirmed after site inspection only if details differ.
+* Fixed price estimate based on measurements provided.
+Final price confirmed on site if details differ.
 </p>
 
 </div>
@@ -161,49 +131,49 @@ Final price confirmed after site inspection only if details differ.
 <script>
 function calculateQuote() {
 
-const elevationAreas = {
-terraced: 35,
-semi: 40,
-detached: 45,
-bungalow: 30
-};
+const storeys = parseInt(document.getElementById("storeys").value);
+const surfaceRate = parseFloat(document.getElementById("surface").value);
 
-let property = document.getElementById("property").value;
-let storeyMultiplier = parseFloat(document.getElementById("storeys").value);
-let surfaceRate = parseFloat(document.getElementById("surface").value);
-let conditionMultiplier = parseFloat(document.getElementById("condition").value);
-let paintMultiplier = parseFloat(document.getElementById("paint").value);
-let accessCost = parseFloat(document.getElementById("access").value);
+const front = parseFloat(document.getElementById("front").value) || 0;
+const rear = parseFloat(document.getElementById("rear").value) || 0;
+const sideLeft = parseFloat(document.getElementById("sideLeft").value) || 0;
+const sideRight = parseFloat(document.getElementById("sideRight").value) || 0;
 
-let elevationCount = document.querySelectorAll(".elevation:checked").length;
-if (elevationCount === 0) {
-alert("Please select at least one elevation.");
+const totalLength = front + rear + sideLeft + sideRight;
+
+if (totalLength === 0) {
+alert("Please enter at least one elevation length.");
 return;
 }
 
-let baseArea = elevationAreas[property];
-let wallCost = baseArea * surfaceRate;
-wallCost *= conditionMultiplier;
-wallCost *= paintMultiplier;
-wallCost *= storeyMultiplier;
-wallCost *= elevationCount;
+/* UK standard storey height assumption */
+const storeyHeight = 2.5; // metres
+const totalArea = totalLength * storeys * storeyHeight;
 
-let extrasCost = 0;
-document.querySelectorAll(".extra:checked").forEach(item => {
-extrasCost += parseFloat(item.value);
-});
+/* Labour + materials */
+let wallCost = totalArea * surfaceRate;
 
-let total = wallCost + accessCost + extrasCost;
+/* Height multiplier (trade realistic) */
+if (storeys === 2) wallCost *= 1.15;
+if (storeys === 3) wallCost *= 1.30;
+
+/* Access */
+let accessCost = parseFloat(
+document.querySelector('input[name="access"]:checked').value
+);
+
+let total = wallCost + accessCost;
 
 document.getElementById("result").innerHTML = `
 <strong>Your Fixed Exterior Painting Price</strong><br><br>
-<span style="font-size:26px;">£${total.toFixed(0).replace(/\B(?=(\d{3})+(?!\d))/g, ",")}</span>
-<div class="breakdown">
-<br>✔ Labour & materials
-<br>✔ Professional preparation
-<br>✔ Two full coats
-<br>✔ Fixed price (subject to confirmation)
-</div>
+<span style="font-size:26px;">
+£${total.toFixed(0).replace(/\B(?=(\d{3})+(?!\d))/g, ",")}
+</span>
+<br><br>
+<span class="small">
+Calculated area: ${totalArea.toFixed(1)} m²<br>
+Includes labour & materials
+</span>
 `;
 }
 </script>
