--- a/test.html
+++ b/test.html
@@ -30,8 +30,8 @@ display: block;
 margin: 8px 0;
 }
 input[type="number"], select {
-width: 150px;
-padding: 5px;
+width: 180px;
+padding: 6px;
 }
 button {
 margin-top: 30px;
@@ -68,8 +68,18 @@ color: #555;
 UK-based pricing • Calculated by square metres
 </p>
 
+<!-- PROPERTY TYPE -->
+<h3>1. Property Type</h3>
+<select id="propertyType" required>
+<option value="">-- Select property type --</option>
+<option value="bungalow">Bungalow</option>
+<option value="terraced">Terraced</option>
+<option value="semi">Semi-detached</option>
+<option value="detached">Detached</option>
+</select>
+
 <!-- STOREYS -->
-<h3>1. Number of Storeys</h3>
+<h3>2. Number of Storeys</h3>
 <select id="storeys">
 <option value="1">1 storey</option>
 <option value="2">2 storeys</option>
@@ -77,7 +87,7 @@ UK-based pricing • Calculated by square metres
 </select>
 
 <!-- ELEVATIONS -->
-<h3>2. Elevations to Paint (Length in metres)</h3>
+<h3>3. Elevations to Paint (Length in metres)</h3>
 
 <label>Front elevation length:
 <input type="number" id="front" min="0" step="0.1"> m
@@ -100,7 +110,7 @@ Leave any elevation blank if not required.
 </p>
 
 <!-- SURFACE -->
-<h3>3. Wall Surface</h3>
+<h3>4. Wall Surface</h3>
 <select id="surface">
 <option value="28">Render (£28 / m²)</option>
 <option value="32">Pebbledash (£32 / m²)</option>
@@ -110,8 +120,7 @@ Leave any elevation blank if not required.
 </select>
 
 <!-- ACCESS -->
-<h3>4. Access Required</h3>
-
+<h3>5. Access Required</h3>
 <label><input type="radio" name="access" value="0" checked> Ladders</label>
 <label><input type="radio" name="access" value="450"> Scaffold tower</label>
 <label><input type="radio" name="access" value="750"> Scaffold over conservatory</label>
@@ -131,6 +140,12 @@ Final price confirmed on site if details differ.
 <script>
 function calculateQuote() {
 
+const propertyType = document.getElementById("propertyType").value;
+if (propertyType === "") {
+alert("Please select a property type.");
+return;
+}
+
 const storeys = parseInt(document.getElementById("storeys").value);
 const surfaceRate = parseFloat(document.getElementById("surface").value);
 
@@ -146,23 +161,21 @@ alert("Please enter at least one elevation length.");
 return;
 }
 
-/* UK standard storey height assumption */
-const storeyHeight = 2.5; // metres
+/* UK standard storey height */
+const storeyHeight = 2.5;
 const totalArea = totalLength * storeys * storeyHeight;
 
-/* Labour + materials */
 let wallCost = totalArea * surfaceRate;
 
-/* Height multiplier (trade realistic) */
+/* Height multiplier */
 if (storeys === 2) wallCost *= 1.15;
 if (storeys === 3) wallCost *= 1.30;
 
-/* Access */
-let accessCost = parseFloat(
+const accessCost = parseFloat(
 document.querySelector('input[name="access"]:checked').value
 );
 
-let total = wallCost + accessCost;
+const total = wallCost + accessCost;
 
 document.getElementById("result").innerHTML = `
 <strong>Your Fixed Exterior Painting Price</strong><br><br>
@@ -171,6 +184,7 @@ document.getElementById("result").innerHTML = `
 </span>
 <br><br>
 <span class="small">
+Property type: ${propertyType.replace(/^\w/, c => c.toUpperCase())}<br>
 Calculated area: ${totalArea.toFixed(1)} m²<br>
 Includes labour & materials
 </span>
