Refactor HTML structure and improve styling

--- a/test.html
+++ b/test.html
@@ -17,22 +17,14 @@ background: #ffffff;
 padding: 30px;
 border-radius: 8px;
 }
-h1 {
-text-align: center;
-}
+h1 { text-align: center; }
 h3 {
 margin-top: 30px;
 border-bottom: 1px solid #ddd;
 padding-bottom: 5px;
 }
-label {
-display: block;
-margin: 8px 0;
-}
-input[type="number"], select {
-width: 200px;
-padding: 6px;
-}
+label { display: block; margin: 8px 0; }
+input[type="number"], select { width: 220px; padding: 6px; }
 button {
 margin-top: 30px;
 background: #1c7c45;
@@ -43,9 +35,6 @@ font-size: 18px;
 border-radius: 5px;
 cursor: pointer;
 }
-button:hover {
-background: #155f35;
-}
 .result {
 margin-top: 30px;
 padding: 25px;
@@ -53,15 +42,11 @@ background: #eef7f0;
 border-radius: 6px;
 font-size: 20px;
 }
-.small {
-font-size: 14px;
-color: #555;
-}
+.small { font-size: 14px; color: #555; }
 .extra-group {
 background: #fafafa;
 padding: 15px;
 border-radius: 5px;
-margin-top: 15px;
 }
 </style>
 </head>
@@ -70,14 +55,11 @@ margin-top: 15px;
 
 <div class="calculator">
 <h1>Exterior Painting Quote Calculator</h1>
-<p class="small" style="text-align:center;">
-UK-based pricing • Calculated by square metres
-</p>
 
 <!-- PROPERTY TYPE -->
 <h3>1. Property Type</h3>
 <select id="propertyType" required>
-<option value="">-- Select property type --</option>
+<option value="">-- Select --</option>
 <option value="bungalow">Bungalow</option>
 <option value="terraced">Terraced</option>
 <option value="semi">Semi-detached</option>
@@ -88,11 +70,11 @@ UK-based pricing • Calculated by square metres
 <h3>2. Number of Bedrooms</h3>
 <select id="bedrooms" required>
 <option value="">-- Select --</option>
-<option value="1">1 bedroom</option>
-<option value="2">2 bedrooms</option>
-<option value="3">3 bedrooms</option>
-<option value="4">4 bedrooms</option>
-<option value="5+">5+ bedrooms</option>
+<option value="1">1</option>
+<option value="2">2</option>
+<option value="3">3</option>
+<option value="4">4</option>
+<option value="5">5+</option>
 </select>
 
 <!-- CONSERVATORY -->
@@ -106,40 +88,26 @@ UK-based pricing • Calculated by square metres
 <!-- STOREYS -->
 <h3>4. Number of Storeys</h3>
 <select id="storeys">
-<option value="1">1 storey</option>
-<option value="2">2 storeys</option>
-<option value="3">3 storeys</option>
+<option value="1">1</option>
+<option value="2">2</option>
+<option value="3">3</option>
 </select>
 
 <!-- ELEVATIONS -->
-<h3>5. Elevations to Paint (Length in metres)</h3>
-
-<label>Front elevation length:
-<input type="number" id="front" min="0" step="0.1"> m
-</label>
-
-<label>Rear elevation length:
-<input type="number" id="rear" min="0" step="0.1"> m
-</label>
-
-<label>Side left elevation length:
-<input type="number" id="sideLeft" min="0" step="0.1"> m
-</label>
-
-<label>Side right elevation length:
-<input type="number" id="sideRight" min="0" step="0.1"> m
-</label>
-
-<p class="small">Leave blank if not required.</p>
+<h3>5. Elevations to Paint (metres)</h3>
+<label>Front <input type="number" id="front" step="0.1"></label>
+<label>Rear <input type="number" id="rear" step="0.1"></label>
+<label>Side left <input type="number" id="sideLeft" step="0.1"></label>
+<label>Side right <input type="number" id="sideRight" step="0.1"></label>
 
 <!-- SURFACE -->
 <h3>6. Wall Surface</h3>
 <select id="surface">
-<option value="28">Render (£28 / m²)</option>
-<option value="32">Pebbledash (£32 / m²)</option>
-<option value="30">Painted brick (£30 / m²)</option>
-<option value="35">Unpainted brick (£35 / m²)</option>
-<option value="38">Stone (£38 / m²)</option>
+<option value="28">Render</option>
+<option value="32">Pebbledash</option>
+<option value="30">Painted brick</option>
+<option value="35">Unpainted brick</option>
+<option value="38">Stone</option>
 </select>
 
 <!-- ACCESS -->
@@ -150,100 +118,100 @@ UK-based pricing • Calculated by square metres
 <label><input type="radio" name="access" value="1200"> Full scaffold</label>
 
 <!-- OPTIONAL EXTRAS: GUTTERING -->
-<h3>8. Optional Extras – Guttering Services</h3>
-
+<h3>8. Optional Extras – Guttering</h3>
 <div class="extra-group">
-<label>
-<input type="checkbox" id="gutterClearCheck">
-Gutter clearing (£5 per metre)
-</label>
-<input type="number" id="gutterClearMetres" min="0" step="0.1" placeholder="Metres">
+<label><input type="checkbox" id="gc"> Gutter clearing (£5/m)</label>
+<input type="number" id="gcm" step="0.1">
+<label><input type="checkbox" id="gw"> Gutter & fascia washing (£5/m)</label>
+<input type="number" id="gwm" step="0.1">
+<label><input type="checkbox" id="gr"> Gutter replacement (£15/m)</label>
+<input type="number" id="grm" step="0.1">
+</div>
 
-<label>
-<input type="checkbox" id="gutterWashCheck">
-Gutter & fascia washing (£5 per metre)
-</label>
-<input type="number" id="gutterWashMetres" min="0" step="0.1" placeholder="Metres">
+<!-- OPTIONAL EXTRAS: UPVC -->
+<h3>9. Optional Extras – UPVC Restoration</h3>
+<div class="extra-group">
+<label><input type="checkbox" id="upvcRestore"> UPVC frames restoration</label>
 
-<label>
-<input type="checkbox" id="gutterReplaceCheck">
-Gutter replacement (£15 per metre)
-</label>
-<input type="number" id="gutterReplaceMetres" min="0" step="0.1" placeholder="Metres">
+<label><input type="checkbox" id="upvcConservatory"> Restore UPVC conservatory (+£40)</label>
+<label><input type="checkbox" id="upvcRoof"> Clean conservatory roof (+£60)</label>
 </div>
 
 <button onclick="calculateQuote()">Calculate Fixed Price</button>
 
 <div class="result" id="result"></div>
 
-<p class="small">
-* Fixed price estimate based on information provided.
-Final price confirmed on site if details differ.
-</p>
-
 </div>
 
 <script>
 function calculateQuote() {
 
-const propertyType = document.getElementById("propertyType").value;
-const bedrooms = document.getElementById("bedrooms").value;
-const conservatory = document.getElementById("conservatory").value;
-
-if (!propertyType || !bedrooms || !conservatory) {
-alert("Please complete property type, bedrooms, and conservatory fields.");
+const property = propertyType.value;
+const beds = bedrooms.value;
+const conserv = conservatory.value;
+if (!property || !beds || !conserv) {
+alert("Please complete property details.");
 return;
 }
 
 const storeys = parseInt(document.getElementById("storeys").value);
-const surfaceRate = parseFloat(document.getElementById("surface").value);
+const surfaceRate = parseFloat(surface.value);
 
-const front = parseFloat(document.getElementById("front").value) || 0;
-const rear = parseFloat(document.getElementById("rear").value) || 0;
-const sideLeft = parseFloat(document.getElementById("sideLeft").value) || 0;
-const sideRight = parseFloat(document.getElementById("sideRight").value) || 0;
+const totalLength =
+(parseFloat(front.value) || 0) +
+(parseFloat(rear.value) || 0) +
+(parseFloat(sideLeft.value) || 0) +
+(parseFloat(sideRight.value) || 0);
 
-const totalLength = front + rear + sideLeft + sideRight;
 if (totalLength === 0) {
-alert("Please enter at least one elevation length.");
+alert("Enter at least one elevation length.");
 return;
 }
 
-const storeyHeight = 2.5;
-const totalArea = totalLength * storeys * storeyHeight;
-
-let wallCost = totalArea * surfaceRate;
+const area = totalLength * storeys * 2.5;
+let wallCost = area * surfaceRate;
 if (storeys === 2) wallCost *= 1.15;
-if (storeys === 3) wallCost *= 1.30;
+if (storeys === 3) wallCost *= 1.3;
 
-const accessCost = parseFloat(
-document.querySelector('input[name="access"]:checked').value
-);
+const accessCost = parseFloat(document.querySelector('input[name="access"]:checked').value);
 
-let gutterExtras = 0;
-if (document.getElementById("gutterClearCheck").checked) {
-gutterExtras += (parseFloat(document.getElementById("gutterClearMetres").value) || 0) * 5;
+let gutterCost = 0;
+if (gc.checked) gutterCost += (parseFloat(gcm.value) || 0) * 5;
+if (gw.checked) gutterCost += (parseFloat(gwm.value) || 0) * 5;
+if (gr.checked) gutterCost += (parseFloat(grm.value) || 0) * 15;
+
+/* UPVC RESTORATION */
+let upvcCost = 0;
+if (upvcRestore.checked) {
+
+const baseTable = {
+"bungalow-1": 30,
+"terraced-2": 40,
+"semi-2": 50,
+"detached-2": 60,
+"terraced-3": 50,
+"semi-3": 60,
+"detached-3": 70
+};
+
+const key = `${property}-${storeys}`;
+upvcCost = baseTable[key] || 0;
+
+const extraBeds = Math.max(0, parseInt(beds) - 1);
+upvcCost += extraBeds * 10;
+
+if (upvcConservatory.checked && conserv === "yes") upvcCost += 40;
+if (upvcRoof.checked && conserv === "yes") upvcCost += 60;
 }
-if (document.getElementById("gutterWashCheck").checked) {
-gutterExtras += (parseFloat(document.getElementById("gutterWashMetres").value) || 0) * 5;
-}
-if (document.getElementById("gutterReplaceCheck").checked) {
-gutterExtras += (parseFloat(document.getElementById("gutterReplaceMetres").value) || 0) * 15;
-}
 
-const total = wallCost + accessCost + gutterExtras;
+const total = wallCost + accessCost + gutterCost + upvcCost;
 
-document.getElementById("result").innerHTML = `
+result.innerHTML = `
 <strong>Your Fixed Exterior Maintenance Price</strong><br><br>
-<span style="font-size:26px;">
-£${total.toFixed(0).replace(/\B(?=(\d{3})+(?!\d))/g, ",")}
-</span>
-<br><br>
+<span style="font-size:26px;">£${total.toFixed(0)}</span><br><br>
 <span class="small">
-Property: ${propertyType}<br>
-Bedrooms: ${bedrooms}<br>
-UPVC Conservatory: ${conservatory === "yes" ? "Yes" : "No"}<br>
-Calculated area: ${totalArea.toFixed(1)} m²
+Area: ${area.toFixed(1)} m²<br>
+Includes labour & materials
 </span>
 `;
 }
